# ai-native-application-architecture-whitepaper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ai-native-whitepaper-master.md  chapter-1-paradigm-shift.md  chapter-10-testing.md  chapter-11-training.md  chapter-12-migration.md  chapter-13-frameworks.md  chapter-14-case-studies.md  chapter-15-conclusion.md  chapter-2-what-changes.md  chapter-3-what-remains.md  chapter-4-whats-new.md  chapter-5-mcp-microservices.md  chapter-6-ui-layer.md  chapter-7-security.md  chapter-8-context.md  chapter-9-analytics.md  demo-slides.html  pyproject.toml
chapters/: chapter-1-paradigm-shift.md  chapter-10-testing.md  chapter-11-training.md  chapter-12-migration.md  chapter-13-frameworks.md  chapter-14-case-studies.md  chapter-15-conclusion.md  chapter-2-what-changes.md  chapter-3-what-remains.md  chapter-4-whats-new.md  chapter-5-mcp-microservices.md  chapter-6-ui-layer.md  chapter-7-security.md  chapter-8-context.md  chapter-9-analytics.md
demo-recording-system/: README.md  demo-recorder.py  setup.py  slide-config-loader.py
demo-recording-system/slides/: 01-introduction.yaml  05-multiple-intents.yaml  06-llm-deployment.yaml
poc/: .env.example  README.md  pyproject.toml
poc/agent/: __init__.py  context_manager.py  discovery.py  intent_classifier.py  orchestrator.py  tool_executor.py
poc/core/: __init__.py  agent_card.py  audit_logger.py  auth.py  exceptions.py  service_registry.py  types.py
poc/demos/: README.md  __init__.py  chapter8_context_demo.py  chapter_5_mcp_microservices.py  chapter_6_dynamic_ui.py  chapter_7_security.py
poc/services/: __init__.py  base_service.py  inventory_service.py  order_service.py  payment_service.py  product_service.py  service_runner.py
poc/tests/: test_context_manager.py  test_discovery.py  test_intent_classifier.py  test_orchestrator.py  test_tool_executor.py
presentations/: .gitignore  README.md  demo-recorder.py  presentation-template.html  slide-config-loader.py
presentations/slides/: 00-evolution-context.yaml  01-business-case.yaml  02-what-we-built.yaml  03-mcp-explained.yaml  05-mcp-explained.yaml  06-llm-role.yaml  08-security.yaml  09-multi-turn.yaml  09-testing.yaml  10-architecture-flow.yaml  10-security.yaml  11-testing.yaml  11-why-it-matters.yaml  12-conclusion.yaml  13-organizational-adaptation.yaml
